[gd_scene load_steps=5 format=3 uid="uid://c4b8h2gb6ujhj"]

[ext_resource type="Texture2D" uid="uid://che14g7n36d24" path="res://pics/no_incoming.png" id="1_10td3"]
[ext_resource type="Script" path="res://scripts/element.gd" id="2_cdtjl"]
[ext_resource type="Texture2D" uid="uid://qqkbnyjlqh77" path="res://pics/red_light.png" id="3_7wx78"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_nhrid"]

[node name="element" type="Sprite2D"]
texture = ExtResource("1_10td3")
script = ExtResource("2_cdtjl")

[node name="shape" type="Area2D" parent="."]

[node name="CollisionShape" type="CollisionShape2D" parent="shape"]
shape = SubResource("RectangleShape2D_nhrid")

[node name="top" type="Sprite2D" parent="."]
z_index = 2
position = Vector2(0, -15)
texture = ExtResource("3_7wx78")

[node name="left" type="Sprite2D" parent="."]
z_index = 2
position = Vector2(-13, -5)
texture = ExtResource("3_7wx78")

[node name="bot_left" type="Sprite2D" parent="."]
z_index = 2
position = Vector2(-13, 11)
texture = ExtResource("3_7wx78")

[node name="bot_right" type="Sprite2D" parent="."]
z_index = 2
position = Vector2(13, 11)
texture = ExtResource("3_7wx78")

[node name="right" type="Sprite2D" parent="."]
z_index = 2
position = Vector2(13, -5)
texture = ExtResource("3_7wx78")

[connection signal="input_event" from="shape" to="." method="_on_shape_input_event"]
[connection signal="mouse_entered" from="shape" to="." method="_on_shape_mouse_entered"]
[connection signal="mouse_exited" from="shape" to="." method="_on_shape_mouse_exited"]
